update figure cnv

--- a/analysis/control-FREEC-exploration.Rmd
+++ b/analysis/control-FREEC-exploration.Rmd
@@ -9,8 +9,6 @@ output:
     toc_float:
       collapsed: false
       smooth_scroll: false
-    fig_width: 7
-    fig_height: 6
     fig_caption: true
     df_print: paged 
 ---
@@ -209,12 +207,12 @@ ht_list <- Heatmap(num_mat, name = "Copy\nNumber",
 
 The results match the previous results, with a couple of cell lines appearing to have large deletions in a couple of chromosomes. However, because these deletions are (1) very large, and (2) not consistent between the primary and immortalized cell lines and (3) cNF are thought to be pretty quiet, I suspect that these are probably a sequencing artifact. While not in scope for this paper, it might be worth trying some other CNV calling methods, especially if we can find patient-matched non-tumor WGS data. 
 
-```{r fig.height=10, fig.width=6}
+```{r fig.height=15, fig.width=6}
 
 draw(ht_list, merge_legend = TRUE)
 
 
-pdf("../figures/cnv_heatmap.pdf")
+pdf("../figures/cnv_heatmap.pdf", width = 6, height = 15)
 draw(ht_list, merge_legend = TRUE)
 dev.off()
 
